syntax = "proto3";

option csharp_namespace = "College.GrpcServer.Protos";

import "google/protobuf/timestamp.proto";
import "google/protobuf/empty.proto";

service CollegeSvc {
	rpc GetAllProfessors(google.protobuf.Empty) returns (AllProfessorsResonse);

	rpc GetProfessorById(GetProfessorRequest) returns (GetProfessorResponse);
}

message GetProfessorRequest {
	string professorId = 1;
}

message GetProfessorResponse {
	string professorId = 1;
	
	string name = 2;
	
	google.protobuf.Timestamp doj = 3;
	
	string teaches = 4;
	
	double salary =5;
	
	bool isPhd = 6;
}

message AllProfessorsResonse {
	repeated GetProfessorResponse professors = 1;
	
	string message = 2;
	
	int32 count = 3;
}
